--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,12 @@
             <br>contact@autoland.ro
     </section>
     <hr>
+     <footer>
+        <div class="footer-links">
+            <a href="www.csac.ro">CSAC</a>
+            <a href="https://scanstart.ro/">ScanStart</a>
+            <a href=" https://graffino.com/">Graffino</a>
+        </div>
     
 </body>
 </html>
