--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,9 @@
         <p>
              0748543708
             <br>contact@autoland.ro
+            <br> <a href="www.csac.ro">CSAC</a>
+            <br><a href="https://scanstart.ro/">ScanStart</a>
+            <br><a href=" https://graffino.com/">Graffino</a>
     </section>
     <hr>
      <footer>
